feat: support get origin driver file name